[package]
name = "firewood"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-as-inner = "0.5.1"
parking_lot = "0.12.1"
rlp = "0.5.1"
keccak-hasher = "0.15.3"
sha3 = "0.10.2"
once_cell = "1.13.1"
hex = "0.4.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.shale]
path = "./shale"
