[package]
name = "shale"
version = "0.1.8"
edition = "2021"
description = "Useful abstraction and light-weight implemenation for a key-value store."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lru = "0.10.0"

[dev-dependencies]
nix = "0.26.1"
growth-ring = { path = "../growth-ring" }
memmap2 = "0.5.10"
rand = "0.8.5"


[[test]]
name = "integration"
path = "tests/mod.rs"